# qwen-06b-rn-expo-experiment

./: .gitignore  Brainstorming.md  CLAUDE.md  Dockerfile.runpod  README.md  TODOS.md  ideas.md  main.py  pyproject.toml  run.py
data/: fetch_docs.py  generate_dataset.py  process_docs.py  ts_check.py  validate_dataset.py
data/dataset/: rn_expo_dataset.jsonl  rn_expo_dataset_rejected.jsonl  rn_expo_dataset_validated.jsonl
data/processed/: react-native.jsonl  react-navigation.jsonl  reanimated.jsonl
eval/: rn_expo_bench.jsonl  run_bench.py
eval/results/: google_gemma-3-1b.jsonl  google_gemma-3-1b_summary.json  lfm2.5-1.2b.jsonl  lfm2.5-1.2b_summary.json  llama-3.2-1b-instruct-french-360s.jsonl  llama-3.2-1b-instruct-french-360s_summary.json  microsoft_phi-4-mini-reasoning.jsonl  microsoft_phi-4-mini-reasoning_summary.json  mistral-7b-instruct-v0.3.jsonl  mistral-7b-instruct-v0.3_summary.json  mistralai_mistral-7b-instruct-v0.3.jsonl  mistralai_mistral-7b-instruct-v0.3_summary.json  nvidia_nemotron-3-nano-4b.jsonl  nvidia_nemotron-3-nano-4b_summary.json  qwen2.5-7b-instruct-1m.jsonl  qwen2.5-7b-instruct-1m_summary.json  qwen3-0.6b-rn-expo-ft.jsonl  qwen3-0.6b-rn-expo-ft_summary.json  qwen3-0.6b.jsonl  qwen3-0.6b_summary.json  qwen_qwen3.5-9b.jsonl  qwen_qwen3.5-9b_summary.json
eval/ts-checker/: global.d.ts  module-stubs.d.ts  package-lock.json  package.json  tsconfig.json
finetune/: convert_gguf.py  train.py
scripts/: runpod_setup.sh  runpod_train.sh
